--- a/app/src/main/res/layout/layout_app_bar_movies_ticket_checkout.xml
+++ b/app/src/main/res/layout/layout_app_bar_movies_ticket_checkout.xml
@@ -15,6 +15,7 @@
         android:src="@drawable/back_arrow" />
 
     <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/tvTicketTitleMoviesTicketCheckout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/dm_sans_bold"
