--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -26,7 +26,15 @@
         <item name="android:textStyle">bold</item>
         <item name="fontFamily">@font/dm_sans</item>
     </style>
-    
+
+    <style name="Spinner" parent="Widget.AppCompat.DropDownItem.Spinner">
+        <item name="android:paddingTop">2dp</item>
+        <item name="android:paddingBottom">2dp</item>
+        <item name="android:textColor">@color/colorPrimary</item>
+        <item name="android:textSize">14sp</item>
+    </style>
+
+
     <!--    Tab Layout Styles-->
     <style name="TabLayoutTextStyle">
         <item name="textAllCaps">false</item>
@@ -85,15 +93,4 @@
         <item name="android:paddingStart">13dp</item>
         <item name="android:paddingEnd">13dp</item>
     </style>
-
-<!--    Bottom Sheet Dialog Style-->
-<!--    <style name="CancellationBottomSheetDialog" parent="Theme.Design.BottomSheetDialog">-->
-<!--        <item name="bottomSheetStyle">@style/ModalBottomDialogBackground</item>-->
-<!--        <item name="background">@color/colorPrimary</item>-->
-<!--    </style>-->
-
-<!--    <style name="ModalBottomDialogBackground" parent="Widget.Design.BottomSheet.Modal">-->
-<!--        <item name="background">@drawable/bottom_sheet_dialog_background</item>-->
-<!--    </style>-->
-
 </resources>
